--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
-<<<<<<< HEAD
-.pnp.js
-=======
 .pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
->>>>>>> 40bb581 (initial commit)
 
 # testing
 /coverage
 
 # next.js
 /.next/
-/out/
+out/
 
 # production
 /build
@@ -32,19 +26,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-<<<<<<< HEAD
-
-# local env files
-.env*.local
-.env
-=======
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files (local only, never commit to GitHub)
 .env*
 .env
 .env.local
->>>>>>> 40bb581 (initial commit)
 
 # vercel
 .vercel
@@ -52,8 +39,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-<<<<<<< HEAD
-=======
 
 /app/generated/prisma
->>>>>>> 40bb581 (initial commit)
