--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.15",
-    "next": "15.4.6",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.29",
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "prisma": "^6.14.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8",
-    "zod-i18n": "^0.0.1",
-    "prisma": "^6.14.0"
+    "zod-i18n": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
